# robocin-ines

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: deps.cmake  rules.cmake
ines/: CMakeLists.txt
ines/clients_py/: emitter.py  receiver.py
ines/common/: CMakeLists.txt  README.md  multicast_udp_socket.py  publish_subscribe.cpp  publish_subscribe.h  recordio.py  timestamp_utility.py  utility.cpp  utility.h  zmq_publish_subscribe.cpp  zmq_publish_subscribe.h  zmq_publish_subscribe.py
ines/common/messages/: CMakeLists.txt  README.md  referee.proto  vision.proto
ines/common/robocup/: README.md
ines/common/robocup/detection/: CMakeLists.txt  geometry.proto  raw.proto  raw_wrapper.proto  tracked.proto  tracked_wrapper.proto
ines/common/robocup/game_controller/: CMakeLists.txt  common.proto  event.proto  geometry.proto  referee.proto
ines/common/robocup/simulation/: CMakeLists.txt  README.md  config.proto  control.proto  custom_robot_specs_erforce.proto  error.proto  robot_control.proto  robot_feedback.proto  synchronous.proto
ines/middleware/: CMakeLists.txt  README.md  middleware.cpp  middleware.h  middleware.proto  middleware_main.cpp
ines/python/: network.py  vision.py  zmq_publish_subscribe.py
ines/python/robocin/pb/ssl/: README.md
ines/python/robocin/pb/utility/: geometry.proto  geometry_pb2.py
ines/referee/: CMakeLists.txt  README.md  referee.proto
ines/referee_py/: referee.py
ines/robocin/pb/ssl/vision/: ball.proto  ball_pb2.py  field.proto  field_pb2.py  frame.proto  frame_pb2.py  robot.proto  robot_pb2.py
ines/services/: CMakeLists.txt  client_main.cpp  common.proto  referee.proto  referee_main.cpp  test_vision.py  vision.proto  vision_main.cpp
ines/third_part/: CMakeLists.txt  ssl_vision_geometry.proto  ssl_vision_wrapper.proto
ines/vision/: CMakeLists.txt  README.md  vision.proto
ines/vision_py/: mappers.py  vision.py
